--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,86 @@
-requests==2.31.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
 beautifulsoup4==4.12.2
-pandas==2.1.3
-python-dotenv==1.0.0
-newspaper3k==0.2.8
-streamlit==1.31.1
-nltk==3.8.1
+blinker==1.9.0
+cachetools==5.5.2
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+cssselect==1.3.0
+distro==1.9.0
+feedfinder2==0.0.4
+feedparser==6.0.10
+filelock==3.18.0
+gitdb==4.0.12
+GitPython==3.1.44
+google-ai-generativelanguage==0.4.0
+google-api-core==2.24.2
+google-auth==2.38.0
 google-generativeai==0.3.2
+googleapis-common-protos==1.69.2
+grpcio==1.71.0
+grpcio-status==1.63.0rc1
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.28.1
+idna==3.10
+importlib_metadata==7.2.1
+jieba3k==0.35.1
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 lxml==5.1.0
-feedparser==6.0.10 
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+narwhals==1.32.0
+newspaper3k==0.2.8
+nltk==3.8.1
+numpy==1.26.4
 openai==1.68.2
+packaging==23.2
+pandas==2.1.3
+pillow==10.4.0
+proto-plus==1.26.1
+protobuf==4.25.6
+pyarrow==19.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.1
+pydantic_core==2.33.0
+pydeck==0.9.1
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+pytz==2025.2
+PyYAML==6.0.2
+referencing==0.36.2
+regex==2024.11.6
+requests==2.31.0
+requests-file==2.1.0
+rich==13.9.4
+rpds-py==0.24.0
+rsa==4.9
+sgmllib3k==1.0.0
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.6
+streamlit==1.31.1
+tenacity==8.5.0
+tinysegmenter==0.3
+tldextract==5.1.3
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing-inspection==0.4.0
+typing_extensions==4.13.0
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.3.0
+validators==0.34.0
+zipp==3.21.0
